# django-materialweb

./: .gitignore  MANIFEST.in  README.rst  build.yml  requirements-development.txt  requirements.txt  setup.cfg  setup.py
css/: _data-table.scss  _top-app-bar.scss
docs/: .buildinfo  Makefile  genindex.html  getting_started.html  getting_started.rst  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: index.rst.txt
docsrc/: Makefile  conf.py
etc/: runner.json
js/auto/: checkbox.js  datatable.js  top-app-bar.js
js/misc/: mobx.js
js/views/: button.jsx  list.jsx  textarea.jsx
materialweb/: README.rst  __init__.py  apps.py
materialweb/tags/: banner.py  base.py  button.py  card.py  checkbox.py  data_table.py  drawer.py  imagelist.py  lists.py  menu.py  select.py  snackbar.py  tabs.py  textarea.py  textfield.py  top_appbar.py
materialweb/templatetags/: materialweb.py
react/auto/: button.js  form-field.js  textfield.js
react/views/: button.jsx  dialog.jsx  list.jsx  select.jsx  textfield.jsx
sass/: _select.scss  _text-field.scss
tags/: base.py  checkbox.py  imagelist.py  textfield.py
templates/material/: betterform.html  display_form.html  table_inline_formset.html  whole_uni_formset.html
templates/material/layout/: checkboxselectmultiple_inline.html  prepended_appended_text.html  radioselect.html  uneditable_input.html
templates/materialweb/: field.html  inputs.html  uni_form.html  uni_formset.html  whole_uni_form.html
templates/materialweb/layout/: field_file.html  (+4 more)
templatetags/: material.py  materialweb.py
(+1 files in other folders)
