[metadata]
name = 'django-materialweb'
version = 1.0
description = Material Design Web implementation for Django
long_description = file: README.rst
url = https://github.com/dozymoe/django-materialweb
author = Fahri Reza
author_email = i@dozy.moe
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content


[options]
include_package_data = true
packages = find:
